# RobotBackupViewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  run.py
keyence-helper/: KeyenceHelper.exe.config  README.md  build.ps1
keyence-helper/src/: BackupCommand.cs  CameraSession.cs  DiagnoseCommand.cs  DiscoverCommand.cs  Json.cs  Log.cs  Program.cs  RemoteFileWalker.cs  SelfTestCommand.cs  VapiRuntime.cs
packaging/: backupviewer.spec
src/backupviewer/: __init__.py  __main__.py  api.py  app.py  compare.py  discover.py  ftpbackup.py  healthscan.py  keyencebackup.py  library.py  mtxbackup.py  phoneview.py  screengrab.py  search.py  session.py  settings.py
src/backupviewer/parsers/: __init__.py  alarms.py  callgraph.py  common.py  dcs.py  frames.py  gmwizlog.py  io_dg.py  ls_program.py  macros.py  mastering.py  mhvalves.py  mtx_saved_image.py  payloads.py  registers.py  styles.py  summary_dg.py  sysvars.py  va.py
src/backupviewer/web/: index.html
src/backupviewer/web/css/: base.css  components.css
src/backupviewer/web/js/: api.js  bgfx.js  cvxremote.js  help_content.js  help_ui.js  highlight_tp.js  jobs.js  keys.js  mtxremote.js  phoneview.js  router.js  scan_ui.js  settings_ui.js  state.js  (+3 more)
tests/: test_camera_link.py  test_close_guard.py  test_discover.py  test_ftpbackup.py  test_healthscan.py  test_keyencebackup.py  test_library.py  test_library_relocate.py  test_library_scan.py  test_mtx_remote.py  test_mtxbackup.py  test_phone_view.py  test_screengrab.py  test_viewfinder.py  ui_batch_probe.py  ui_bgfx_probe.py  ui_help_probe.py
(+42 files in other folders)
