[project]
name = "backupviewer"
version = "0.7.6"
description = "FANUC robot backup viewer - browse MD backups in a clean, fast GUI"
requires-python = ">=3.10"
dependencies = ["pywebview>=5"]

[project.optional-dependencies]
dev = ["pytest", "pyinstaller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
